Working more on the tables

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -199,21 +199,27 @@ The key working equations and the boundary conditions are summarized in Table \r
     \midrule
     \textbf{Boundary} & \multicolumn{3}{c}{\textbf{Richard's Eqn.}} & \multicolumn{3}{c}{\textbf{Transport Eqn.}} \\
     % Foundation crack
-    Foundation crack & \multicolumn{3}{c}{$p = p_\mathrm{in/out} \; \mathrm{(Pa)}$} & \multicolumn{3}{c}{$j_\mathrm{ck} = \frac{u c}{1 - \exp{(u L_\mathrm{slab}/D_\mathrm{air})}}$} \\
+    (ck) & \multicolumn{3}{c}{$p = p_\mathrm{in/out} \; \mathrm{(Pa)}$} & \multicolumn{3}{c}{$j_\mathrm{ck} = \frac{u c}{1 - \exp{(u L_\mathrm{slab}/D_\mathrm{air})}}$} \\
     % Groundwater source
-    Groundwater & \multicolumn{3}{c}{\textit{No flow}} & \multicolumn{3}{c}{$c = c_\mathrm{gw} K_H \; \mathrm{(\mu g/m^3)}$} \\
+    (gw) & \multicolumn{3}{c}{\textit{No flow}} & \multicolumn{3}{c}{$c = c_\mathrm{gw} K_H \; \mathrm{(\mu g/m^3)}$} \\
     % Ground surface
-    Groundsurface & \multicolumn{3}{c}{$p = 0 \; \mathrm{(Pa)}$} & \multicolumn{3}{c}{$c = 0 \; \mathrm{(\mu g/m^3)}$} \\
+    (atm) & \multicolumn{3}{c}{$p = 0 \; \mathrm{(Pa)}$} & \multicolumn{3}{c}{$c = 0 \; \mathrm{(\mu g/m^3)}$} \\
     % Preferential pathway
-    Preferential & \multicolumn{3}{c}{$p = 0 \; \mathrm{(Pa)}$} & \multicolumn{3}{c}{$c = c_\mathrm{gw} K_H \chi \; \mathrm{(\mu g/m^3)}$} \\
+    (pp) & \multicolumn{3}{c}{$p = 0 \; \mathrm{(Pa)}$} & \multicolumn{3}{c}{$c = c_\mathrm{gw} K_H \chi \; \mathrm{(\mu g/m^3)}$} \\
     \midrule
-    \multicolumn{7}{c}{\textbf{Soil \& gravel properties}\cite{dan_capillary_2012,abreu_conceptual_2012,u.s._environmental_protection_agency_userss_2004}} \\
+    \multicolumn{7}{c}{\textbf{Soil Properties}\cite{dan_capillary_2012,abreu_conceptual_2012,u.s._environmental_protection_agency_userss_2004}} \\
     \midrule
     \textbf{Soil} & \textbf{$\kappa_s \; \mathrm{(m^2)}$} & \textbf{$\rho \; \mathrm{(kg/m^3)}$} & \textbf{$\theta_s$} & \textbf{$\theta_r$} & \textbf{$\alpha \; \mathrm{(1/m)}$} & \textbf{$n$} \\
     % GRAVEL
     Gravel & $1.3 \cdot 10^{-9}$ & 1680 & 0.42 & 0.005 & 100 & 3.1 \\
     % SANDY LOAM
     Sandy Loam & $5.9 \cdot 10^{-13}$ & 1460 & 0.39 & 0.039 & 2.7 & 1.4 \\
+    % TCE PROPERTIES
+    \midrule
+    \multicolumn{7}{c}{\textbf{Trichloroethylene (diluted in air) Properties}\cite{abreu_conceptual_2012,u.s._environmental_protection_agency_userss_2004}} \\
+    \midrule
+     & \textbf{$D_\mathrm{air} \; \mathrm{(m^2/h)}$} & \textbf{$D_\mathrm{water} \; \mathrm{(m^2/h)}$} & \textbf{$\rho \; \mathrm{(kg/m^3)}$} & \textbf{$\mu \; \mathrm{(Pa \cdot s)}$} & \textbf{$K_H$} & \textbf{$M \; \mathrm{(g/mol)}$} \\
+     & $2.47 \cdot 10^{-2}$ & $3.67 \cdot 10^{-6}$ & 1.614 & $1.86 \cdot 10^{-5}$ & 0.403 & 131.39 \\
     \midrule
     \multicolumn{7}{c}{\textbf{Building Properties}} \\
     \midrule
@@ -524,15 +530,15 @@ Note: a relationship between $A_e$ and $p_\mathrm{in/out}$ may be established fo
 
 \begin{table}[htb!]
   \centering
- \begin{tabular}{l c c c}
-  \toprule
-  \textbf{Percentile}                                                     & \textbf{10th} & \textbf{50th} & \textbf{90th} \\
-  EPA\cite{u.s._epa_exposure_2011,m._d._koontz_estimation_1995}           & 0.16-0.2      & 0.35-0.49     & 1.21-1.49     \\
-  ASU house\cite{holton_temporal_2013,guo_identification_2015}            & 0.21          & 0.43          & 0.78          \\
-  Indianapolis\cite{u.s._environmental_protection_agency_assessment_2015} & 0.34          & 0.74          & 1.27          \\
-  \bottomrule
- \end{tabular}
- \caption{Air exchange rate values (1/hr)}\label{tbl:air_exchange_rate}
+  \begin{tabular}{l c c c}
+    \toprule
+    \textbf{Percentile}                                                     & \textbf{10th} & \textbf{50th} & \textbf{90th} \\
+    EPA\cite{u.s._epa_exposure_2011,m._d._koontz_estimation_1995}           & 0.16-0.2      & 0.35-0.49     & 1.21-1.49     \\
+    ASU house\cite{holton_temporal_2013,guo_identification_2015}            & 0.21          & 0.43          & 0.78          \\
+    Indianapolis\cite{u.s._environmental_protection_agency_assessment_2015} & 0.34          & 0.74          & 1.27          \\
+    \bottomrule
+  \end{tabular}
+  \caption{Air exchange rate values (1/hr)}\label{tbl:air_exchange_rate}
 \end{table}
 
 To show the influence of possible statistical fluctuations of air exchange rate on the predictions of $\alpha_\mathrm{gw}$ values, the scenarios of Figure \ref{fig:land_drain_scenarios} were rerun calculated using the 5th and 95th percentile measured $A_e$ values, 0.17 and 0.90 respectively (based upon the actual distributions in Figure S1), providing predicted upper and lower bounds for $\alpha_\mathrm{gw}$.
