Ticking off more things..

--- a/tex/cover-letter/cover_letter.tex
+++ b/tex/cover-letter/cover_letter.tex
@@ -5,22 +5,23 @@
 \address{School of Engineering \\ Brown University \\ Providence 02912}
 \begin{document}
 
-\begin{letter}{Editor of Environmental Science \& Technology \\
-1155 Sixteenth Street N.W. \\
-Washington, DC 20036}
+\begin{letter}{Editorial Department of Building and Environment}
 \opening{Dear Sir or Madam:}
 
-I am pleased to submit this manuscript entitled "Temporal Variations In Vapor Intrusion-Induced Indoor Air Contaminant Concentrations" for review and possible publication in Environmental Science \& Technology.
-This is original work, and has not been previously submitted to any other journal or conference proceedings.
+I am pleased to submit this manuscript entitled "Temporal Variations In Vapor Intrusion-Induced Indoor Air Contaminant Concentrations" for review and possible publication in Building and Environment.
+This is original work, and has not been previously published by any other journal or conference proceedings.
 
 Using numerical models and published field data from three vapor intrusion (VI) sites, we explore the causes of the temporal variation in indoor air contaminant concentrations in VI impacted houses, a poorly understood phenomena.
 We especially investigate the role of preferential contaminant pathways have in VI, and how air exchange rates contribute to variability in indoor air contaminant concentration.
 
-We found under which conditions one may expect to observe significant changes in indoor air concentrations, and when one should be especially be concerned with preferential pathways.
-Furthermore, we found how changes in indoor outdoor pressure difference and air exchange rate independently affect temporal variability in VI under different conditions. 
-These finding help understand and explain the temporal variation that has been observed at many VI sites, and giving practical guidance for assessment of these sites, something that we expect will be of great interest to your readership.
-
-All of the work presented is either created by us or properly referenced, including the TOC art which adhere to the TOC art policy and is the prescribed size of 240 by 135 points.
+Some of our conclusions that we believe contribute to the state-of-the-art:
+\begin{itemize}
+  \item Preferential pathways may lead to the false conclusion that there are indoor sources present at a VI site.
+  \item Preferential pathways can dramatically increase a VI site's sensitivity to building pressurization.
+  \item Air exchange rate is poorly correlated with normal range of building pressurization and may significantly contribute to indoor contaminant variability.
+  \item Indoor contaminant concentration vary roughly by up to a factor of two across a few days; up to an order magnitude variation may be expected over a week.
+\end{itemize}
+We expect the topics explored and conclusions reached in our work will be of great interest to your readership.
 
 Thank you for considering this manuscript for publication.
 \closing{Sincerely,}
